--- a/css/design.css
+++ b/css/design.css
@@ -35,7 +35,7 @@ section {
 
 /* SECTION PRINCIPALE */
 #mainsection {
-    background: url(../img/coffee-mac4.jpg);
+    background: url(../img/coffee-mac6_1.5sec.gif);
     padding-top: 20%;
     background-size: 100%;
     height: 100%;
@@ -219,30 +219,49 @@ section {
 
 /*FORM*/
 .formBody{
-  margin-left: 2%;
-  margin-right: 2%;
-  color: black;
+  margin-left: 1%;
+  margin-right: 1%;
+  color: white;
+}
+
+.form{
+    margin: 2%;
+}
+.formBlock{
+  background-color: rgba(45,62,80,.76);
+  border-radius: 10px!important;
+}
+
+.modal-body {
+  background-image: url(../img/FormBGR.png);
 }
 
 /* SECTION CONTACT */
 #contact {
- padding-top : 80px;
-    background: #111111;
-    height :500px;
+  /* padding-top : 3%; */
+  /* background: #111111; */
+  /* height :500px; */
 }
 
 .contact-info{
-    background: #111111;
-    color : white;
-    height: 50px;
-    font-size: 1.1em;
-    padding-top : 10px;
+  /* background: #111111;
+  color : white; */
+  height: 50px;
+  font-size: 1.1em;
+  padding-top : 10px;
+}
+
+/* SECTION RETROUR Client */
+#retours {
+  padding-top : 80px;
+  background: #111111;
+  height :500px;
 }
 
 /*BAS DE PAGE : FOOTER*/
 #footer {
-    margin-top : 20px;
-    font-size: 1.3em;
-    background: transparent;
-    border-color:transparent;
+  margin-top : 20px;
+  font-size: 1.3em;
+  background: transparent;
+  border-color:transparent;
 }
