--- a/css/turn.css
+++ b/css/turn.css
@@ -8,9 +8,10 @@
   padding: 0px;*/
 }
 
-::selection {
+/* for unselectable text */
+/* ::selection {
   background: transparent;
-}
+} */
 
 h4 {
   font-size: 26px;
