--- a/css/design.css
+++ b/css/design.css
@@ -261,28 +261,64 @@ section {
   background-position: center;
 }
 
+
 #bookFeedbackID img{
-  position: absolute;
-  width: 30%;
-  margin-left: 35%;
-  margin-top: 20%;
+  position: relative;
+  /* width: 30%; */
+  max-width: 100%;
+  max-height: 100%;
+  /* margin-left: 35%;
+  margin-top: 20%; */
   background-color: Transparent;
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   background-repeat: no-repeat;
   background-size: 100%,100%;
-/*
-  box-shadow:  10px 10px 10px #1C1A19;
-  -moz-box-shadow:  10px 10px 10px #1C1A19;
-  -webkit-box-shadow:  10px 10px 10px #1C1A19;
-  -khtml-box-shadow:  10px  10px 10px #1C1A19; */
-
 }
 
-/* .bookFeedback{
-  position: relative;
-  text-align: center;
+.bookFeedback{
+  position: absolute;
+  margin-left: 35%;
+  margin-top: 20%;
+  width: 65%;
+  height: 57%;
+  font-family: "Indie Flower", cursive !important;
+  line-height: 45%;
+  font-size: 13px;
+  font-weight: bold;
   color: black;
-} */
+}
+
+.text-block {
+  position: absolute;
+  -webkit-transform:rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+  bottom: 60%;
+  right: 72%;
+}
+
+.text-block2 {
+  position: absolute;
+  -webkit-transform:rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(-5deg);
+  bottom: 67%;
+  right: 40%;
+}
+
+.text-block3 {
+  position: absolute;
+  -webkit-transform:rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+  bottom: 12%;
+  right: 38%;
+}
 
 .top_left_feedback{
   color: black;
