--- a/css/design.css
+++ b/css/design.css
@@ -39,8 +39,11 @@ section {
     padding-top: 20%;
     background-size: 100%;
     height: 100%;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
 }
 
 
@@ -82,7 +85,11 @@ section {
     background: url(../img/coffee_table.jpg);
     background-size: 100%;
     height: 100%;
-    background-position: center;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
 }
 .imgService{
     background-color: Transparent;
@@ -258,28 +265,20 @@ section {
   background: url(../img/coffee_table.jpg);
   background-size: 100%;
   height: 100%;
-  background-position: center;
-}
 
-
-#bookFeedbackID img{
-  position: relative;
-  /* width: 30%; */
-  max-width: 100%;
-  max-height: 100%;
-  /* margin-left: 35%;
-  margin-top: 20%; */
-  background-color: Transparent;
+  background-position: center center;
   background-repeat: no-repeat;
-  background-size: 100%,100%;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
 }
 
 .bookFeedback{
   position: absolute;
-  margin-left: 35%;
-  margin-top: 17%;
-  width: 65%;
-  height: 57%;
+  margin-left: 30%;
+  margin-top: 19%;
+  width: 45%;
+  height: 55%;
   font-family: "Indie Flower", cursive !important;
   line-height: 45%;
   font-size: 13px;
@@ -287,7 +286,22 @@ section {
   color: black;
 }
 
-.text-block {
+#bookFeedbackID img{
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  /* margin-left: 35%;
+  margin-top: 20%; */
+  background-color: Transparent;
+  /* background-size: 100%,100%; */
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+/* .text-block {
   position: absolute;
   -webkit-transform:rotate(-10deg);
   -moz-transform: rotate(-10deg);
@@ -325,8 +339,7 @@ section {
   font-family: "Indie Flower", cursive !important;
   font-size: 100px;
   z-index: 500;
-
-}
+} */
 
 /*BAS DE PAGE : FOOTER*/
 #footer {
