--- a/css/design.css
+++ b/css/design.css
@@ -275,6 +275,9 @@ section {
 
 .bookFeedback{
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: 30%;
   margin-top: 19%;
   width: 45%;
@@ -284,6 +287,7 @@ section {
   font-size: 13px;
   font-weight: bold;
   color: black;
+
 }
 
 #bookFeedbackID img{
@@ -291,14 +295,10 @@ section {
   max-width: 100%;
   max-height: 100%;
   /* margin-left: 35%;
-  margin-top: 20%; */
+  margin-top: 20%;*/
   background-color: Transparent;
-  /* background-size: 100%,100%; */
-
-  background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  /* background-size: 100%,100%; */
 }
 
 /* .text-block {
