apdate gif and  feedback book done

--- a/css/design.css
+++ b/css/design.css
@@ -35,7 +35,7 @@ section {
 
 /* SECTION PRINCIPALE */
 #mainsection {
-    background: url(../img/coffee-mac6_1.5sec.gif);
+    background: url(../img/coffee-mac7.gif);
     padding-top: 20%;
     background-size: 100%;
     height: 100%;
