--- a/css/design.css
+++ b/css/design.css
@@ -76,7 +76,7 @@ section {
   /* background-color: white; */
 
 }
-/* Main writing text position correction */
+/* Main writing text wight position correction */
 @media screen and (min-width: 1650px) and (max-width: 1750px) {
   .auto_write {
       top: 23%;
@@ -92,23 +92,17 @@ section {
       top: 26%;
   }
 }
-@media screen and (min-width: 1350px) and (max-width: 1450px) {
+@media screen and (min-width: 1025px) and (max-width: 1450px) {
   .auto_write {
       top: 27%;
   }
 }
-@media screen and (min-width: 1250px) and (max-width: 1450px) {
-  .auto_write {
-      top: 29%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1250px) {
+@media screen and (min-width: 768px) and (max-width: 1025px) {
   .auto_write {
       top: 27%;
       left: 37%;
       width: 27%;
       font-size: 0.7vw;
-      background-color: white;
   }
 }
 @media screen and (min-width: 426px) and (max-width: 768px) {
@@ -117,7 +111,6 @@ section {
       left: 33%;
       width: 35%;
       font-size: 0.9vw;
-      background-color: white;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 425px) {
@@ -134,6 +127,51 @@ section {
       width: 65%;
       left: 17%;
       font-size: 2.0vw;
+  }
+}
+
+/* @media screen and (min-width: 1030px) and (max-width: 1800px) and (min-height: 500px) and (max-height: 750px) {
+  .auto_write {
+      top: 15%;
+  }
+} */
+
+/* @media screen and (min-width: 1130px) and (max-width: 2100px) and (min-height: 750px) and (max-height: 1700px) {
+  .auto_write {
+      top: 27%;
+  }
+} */
+/* @media screen and (min-width: 1030px) and (max-width: 2100px) and (min-height: 500px) and (max-height: 700px) {
+  .auto_write {
+      top: 20%;
+      font-size: 0.4vw;
+  }
+}
+
+@media screen and (min-width: 315px) and (max-width: 325px) and (min-height: 300px) and (max-height: 800px) {
+  .auto_write {
+      font-size: 1.6vw;
+  }
+} */
+
+/* @media screen and (min-height: 750px) and (max-height: 800px) {
+  .auto_write {
+      top: 20%;
+  }
+}
+@media screen and (min-height: 650px) and (max-height: 750px) {
+  .auto_write {
+      top: 18%;
+  }
+}
+@media screen and (min-height: 500px) and (max-height: 650px) {
+  .auto_write {
+      top: 14%;
+  }
+}*/
+@media screen and (min-height: 1px) and (max-height: 450px) and (min-width: 850px) and (max-width: 4500px) {
+  .auto_write {
+      top: -1400%;
   }
 }
 
