--- a/css/design.css
+++ b/css/design.css
@@ -135,7 +135,12 @@ section {
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1450px) and (min-height: 550px) and (max-height: 600px) {
+@media screen and (min-width: 1025px) and (max-width: 1200px) and (min-height: 550px) and (max-height: 580px) {
+  .auto_write {
+      top: 23%;
+  }
+}
+@media screen and (min-width: 1200px) and (max-width: 1450px) and (min-height: 550px) and (max-height: 600px) {
   .auto_write {
       top: 20%;
   }
@@ -155,19 +160,31 @@ section {
       top: 21%;
   }
 }
-@media screen and (min-width: 1450px) and (max-width: 1850px) and (min-height: 550px) and (max-height: 800px) {
+@media screen and (min-width: 1450px) and (max-width: 1670px) and (min-height: 550px) and (max-height: 700px) {
   .auto_write {
-      top: 13%;
+      top: 17%;
   }
 }
-/* @media screen and (min-width: 1030px) and (max-width: 1800px) and (min-height: 400px) and (max-height: 750px) {
+@media screen and (min-width: 1500px) and (max-width: 1550px) and (min-height: 700px) and (max-height: 850px) {
   .auto_write {
-      top: -15%;
+      top: 20%;
   }
-} */
-@media screen and (min-height: 1px) and (max-height: 550px) and (min-width: 850px) and (max-width: 4500px) {
+}
+@media screen and (min-width: 1670px) and (max-width: 1850px) and (min-height: 550px) and (max-height: 800px) {
   .auto_write {
-      top: -140%;
+      top: 10,5%;
+  }
+}
+@media screen and (min-width: 850px) and (max-width: 4500px) and (min-height: 1px) and (max-height: 550px) {
+  .auto_write {
+    visibility: hidden;
+    display: none;
+  }
+}
+@media screen and (min-width: 1850px) and (max-width: 8800px) and (min-height: 500px) and (max-height: 700px) {
+  .auto_write {
+    visibility: hidden;
+    display: none;
   }
 }
 
@@ -408,9 +425,37 @@ section {
 }
 
 /* SECTION Feedback */
+.scrabble{
+  position: absolute;
+  left: 10%;
+  top: 70%;
+  width: 30%;
+  height: 20%;
+}
+
+#scrabble img{
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: Transparent;
+  background-repeat: no-repeat;*
+  -webkit-transition: transform 1s ease-in-out;
+  -moz-transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+}
+
+.scrabble img:hover{
+  transform: scale(1.2);
+  cursor:pointer;
+}
+
+
+
+
+
 #feedback {
   background: url(../img/coffee_table2.png);
-  background-size: 100%;
+  /* background-size: 100%; */
   height: 100%;
 
   background-position: center center;
