--- a/css/design.css
+++ b/css/design.css
@@ -6,7 +6,34 @@
 
 
 body {
+display: none;
+}
 
+#page {
+
+}
+#loading {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    background-color: green;
+    /* background: url(../img/loader.gif); */
+    background-repeat: no-repeat;
+    background-position: center;
+
+    background: url(../img/coffee-mac_15ips.gif);
+    background-size: 100%;
+    background-position: center center;
+    background-size: cover;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #navbar {
@@ -424,32 +451,52 @@ section {
   padding-top : 10px;
 }
 
-/* SECTION Feedback */
-.scrabble{
-  position: absolute;
-  left: 10%;
-  top: 70%;
-  width: 30%;
-  height: 20%;
-}
 
-#scrabble img{
+.postIt{
   position: absolute;
-  max-width: 100%;
-  max-height: 100%;
+  background: url(../img/postit.png);
+  background-size: cover;
   background-color: Transparent;
-  background-repeat: no-repeat;*
-  -webkit-transition: transform 1s ease-in-out;
-  -moz-transition: transform 1s ease-in-out;
-  transition: transform 1s ease-in-out;
+  background-repeat: no-repeat;
+  -webkit-transition: transform 0.5s ease-in-out;
+  -moz-transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  left: 7%;
+  top: 70%;
+  width: 12%;
+  height: 22%;
+  -webkit-transform:rotate(-13deg);
+  -moz-transform: rotate(-13deg);
+  -ms-transform: rotate(-13deg);
+  -o-transform: rotate(-13deg);
+  transform: rotate(-13deg);
 }
 
-.scrabble img:hover{
-  transform: scale(1.2);
+.postIt p{
+  position: absolute;
+  font-family: "Amatic SC", cursive !important;
+  color: black;
+  font-weight: bold;
+  font-size: 2rem;
   cursor:pointer;
 }
 
+.ml{
+  top: 30%;
+  left: 15%;
+}
 
+.cgv{
+  top: 50%;
+  left: 15%;
+}
+
+
+
+.postIt:hover{
+  transform: scale(1.2);
+  /* cursor:pointer; */
+}
 
 
 
