--- a/css/design.css
+++ b/css/design.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Orbitron&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Quantico&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
 
 
 body {
@@ -15,7 +16,7 @@ body {
   left:0;
   bottom:0;
   right:0;
-  background:url(../loader/loader.gif);
+  background:url(../loader/loader2.gif);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -27,13 +28,13 @@ body {
   background:black;
   position:absolute;
   width:0;
-  top:70%;
+  top:80%;
 }
 #progstat{
   font-size:1.7em;
   letter-spacing: 3px;
   position:absolute;
-  top:68%;
+  top:78%;
   margin-top:-40px;
   width:100%;
   text-align:center;
@@ -467,6 +468,8 @@ section {
   background-size: cover;
   background-color: Transparent;
   background-repeat: no-repeat;
+  max-width: 100%;
+  max-height: 100%;
   -webkit-transition: transform 0.5s ease-in-out;
   -moz-transition: transform 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out;
@@ -480,32 +483,114 @@ section {
   -o-transform: rotate(-13deg);
   transform: rotate(-13deg);
 }
-
 .postIt p{
   position: absolute;
   font-family: "Amatic SC", cursive !important;
   color: black;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.2vw;
   cursor:pointer;
 }
-
+.postIt:hover{
+  transform: scale(1.2);
+}
 .ml{
   top: 30%;
   left: 15%;
 }
-
 .cgv{
   top: 50%;
   left: 15%;
 }
 
-
-
-.postIt:hover{
-  transform: scale(1.2);
-  /* cursor:pointer; */
+.phone{
+  position: absolute;
+  background-position: center center;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  left: 45%;
+  top: 8%;
+  width: 10%;
+  height: 33%;
+  -webkit-transform:rotate(50deg);
+  -moz-transform: rotate(50deg);
+  -ms-transform: rotate(50deg);
+  -o-transform: rotate(50deg);
+  transform: rotate(50deg);
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
+#phoneId img{
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+}
+
+.phoneFollow {
+  font-family: 'Source Sans Pro', sans-serif;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.1vw;
+  filter:url('#goo');
+}
+
+.button {
+  top: 4vw;
+  left: 1.3vw;
+  z-index: 5;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  /*align-items: center; */
+  width: 6vw;
+  height: 1.5vw;
+  background: linear-gradient(45deg, #69a2d1, #3048bf);
+  border-radius: 10px;
+  color: #FFF;
+  font-size: 0.7vw;
+  letter-spacing: 1px;
+  font-weight: 200;
+}
+
+.social {
+  opacity: 0;
+  position: relative;
+  margin: 0.5vw;
+  width: 2vw ;
+  height: 2vw ;
+  border-radius: 100%;
+  display: inline-block;
+  color: #FFF;
+  font-size: 1.1vw;
+  text-align: center;
+  right: 0.6vw;
+}
+.social i {
+   margin-top: 0.5vw;
+  }
+.social a {
+    color: #FFF;
+  }
+
+
+.linkedin {
+  background: #00aced;
+}
+.facebook {
+  background: #3b5998;
+}
+.clicked {
+  opacity: 1;
+  transition: 1.2s all ease;
+  transform: translateY(7vw);
+}
+
+
+
 
 
 
@@ -513,7 +598,6 @@ section {
   background: url(../img/coffee_table2.png);
   /* background-size: 100%; */
   height: 100%;
-
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -549,45 +633,6 @@ section {
   /* background-size: 100%,100%; */
 }
 
-/* .text-block {
-  position: absolute;
-  -webkit-transform:rotate(-10deg);
-  -moz-transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg);
-  -o-transform: rotate(-10deg);
-  transform: rotate(-10deg);
-  bottom: 60%;
-  right: 72%;
-}
-
-.text-block2 {
-  position: absolute;
-  -webkit-transform:rotate(-5deg);
-  -moz-transform: rotate(-5deg);
-  -ms-transform: rotate(-5deg);
-  -o-transform: rotate(-5deg);
-  transform: rotate(-5deg);
-  bottom: 67%;
-  right: 40%;
-}
-
-.text-block3 {
-  position: absolute;
-  -webkit-transform:rotate(-3deg);
-  -moz-transform: rotate(-3deg);
-  -ms-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
-  transform: rotate(-3deg);
-  bottom: 12%;
-  right: 38%;
-}
-
-.top_left_feedback{
-  color: black;
-  font-family: "Indie Flower", cursive !important;
-  font-size: 100px;
-  z-index: 500;
-} */
 
 /*BAS DE PAGE : FOOTER*/
 #footer {
