--- a/css/design.css
+++ b/css/design.css
@@ -26,7 +26,7 @@ h4 {
   left:0;
   bottom:0;
   right:0;
-  background:url(../loader/loader2.gif);
+  background:url(../img/loader2.gif);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
