--- a/css/design.css
+++ b/css/design.css
@@ -98,8 +98,8 @@ section {
     background-attachment: fixed;
     background-size: cover;
     background-color: #464646;
-    -webkit-perspective: 100px; /* Safari 4-8  */
-    perspective: 100px;
+    /* -webkit-perspective: 100px; */
+    /* perspective: 100px; */
 }
 
 
