--- a/css/design.css
+++ b/css/design.css
@@ -106,10 +106,10 @@ section {
 
 .auto_write{
   position: absolute;
-  -webkit-transform-style: preserve-3d;
+  /* -webkit-transform-style: preserve-3d;
   -webkit-transform: rotateX(-5deg);
   transform-style: preserve-3d;
-  transform: rotateX(-5deg);
+  transform: rotateX(-5deg); */
 
   width: 24%;
   height: auto;
@@ -120,11 +120,10 @@ section {
   text-align: center;
   font-size: 0.6vw;
   /* position: fixed; */
-  /* background-color: white; */
 
 }
 /* Main writing text wight position correction */
-@media screen and (min-width: 1750px) and (max-width: 1850px) {
+/* @media screen and (min-width: 1750px) and (max-width: 1850px) {
   .auto_write {
       top: 21%;
   }
@@ -233,7 +232,7 @@ section {
     visibility: hidden;
     display: none;
   }
-}
+} */
 
 .linkToFeedback{
   position: absolute;
@@ -488,7 +487,7 @@ section {
   left: 7%;
   top: 70%;
   width: 12%;
-  height: 22%;
+  height: 13vw;
   -webkit-transform:rotate(-13deg);
   -moz-transform: rotate(-13deg);
   -ms-transform: rotate(-13deg);
@@ -536,6 +535,8 @@ section {
   top: 8%;
   width: 10%;
   height: 33%;
+  min-width: 70px;
+  min-height: 210px;
   -webkit-transform:rotate(50deg);
   -moz-transform: rotate(50deg);
   -ms-transform: rotate(50deg);
@@ -572,6 +573,8 @@ section {
   /*align-items: center; */
   width: 5vw;
   height: 1.5vw;
+  min-width: 45px;
+  min-height: 15px;
   background: linear-gradient(45deg, #69a2d1, #3048bf);
   border-radius: 10px;
   color: #FFF;
@@ -580,12 +583,23 @@ section {
   font-weight: 200;
 }
 
+@media only screen and (min-width: 120px) and (max-width: 520px){
+  .button {
+      top: 7vw;
+      left: 2.3vw;
+      font-size: 7px;
+  }
+/* TODO .social css */
+}
+
 .social {
   opacity: 0;
   position: relative;
   margin: 0.5vw;
   width: 2vw ;
   height: 2vw ;
+  min-width: 15px;
+  min-height: 15px;
   border-radius: 100%;
   display: inline-block;
   color: #FFF;
